--- a/css/style.css
+++ b/css/style.css
@@ -29,18 +29,86 @@
 .sidebar{
     height: 100%;
     width: 400px;
-    background-color: red;
+    background-color: white;
 }
 
 /* Finestra per la visualizzazione della chat */
 .message-section{
     width: calc(100% - 400px);
     height: 100%;
-    background-color: blue;
+    background-image: url(../img/mine.jpg);
+    position: relative;
 }
 
+/* Header delle finestre */
 .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 80px;
     width: 100%;
-    background-color: green;
+    background-color: #EAEAEA;
+}
+
+/*  Informazioni personali  */
+.personal-info{
+    display: flex;
+    align-items: center;
+}
+
+/* Foto profilo */
+.profile-icons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+/* Informazioni utente */
+.user-info{
+    display: flex;
+    flex-direction: column;
+    line-height: 1;
+}
+
+/* Foto profilo utente */
+.profile-pic{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 80px; /* Uguale all'altezza dell'header */
+    margin-left: 10px;
+}
+
+/* Foto profilo utente */
+.img-profile{
+    width: 80%;
+    border-radius: 100px;
+}
+
+/* Sezione di ricezione notifiche */
+.notifications{
+    width: 100%;
+    height: 80px;
+    background-color: #8EDAFC;
+}
+
+/* Barra di ricerca */
+.searchbar{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border-bottom: 1px solid rgb(227, 227, 227);
+}
+
+/* Sezione per l'invio dei messaggi */
+.input_section{
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    background-color: #EAEAEA;
 }
