--- a/css/style.css
+++ b/css/style.css
@@ -91,13 +91,25 @@
 
 /* Sezione di ricezione notifiche */
 .notifications{
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 80px;
     background-color: #8EDAFC;
+    padding: 10px 20px;
+}
+
+.emoji-button{
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 /* Barra di ricerca */
 .searchbar{
+    padding: 10px;
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 50px;
     background-color: white;
@@ -106,9 +118,32 @@
 
 /* Sezione per l'invio dei messaggi */
 .input_section{
+    padding: 15px 30px;
+    display: flex;
     position: absolute;
     width: 100%;
     height: 70px;
     bottom: 0;
     background-color: #EAEAEA;
+}
+
+.input_section input{
+    margin: 0 20px;
+}
+
+.notifications-icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 100px;
+    height: 50px;
+    width: 50px;
+    background-color: rgb(255, 255, 255);
+    color: #8EDAFC;
+}
+
+.text-notifications{
+    display: flex;
+    flex-direction: column;
 }
