--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,11 @@
     flex-direction: column;
 }
 
+.user-list{
+    height: calc(100% - 210px );
+    overflow-y: auto;
+}
+
 .user-list .user{
     padding: 10px;
     border-bottom: 1px solid rgb(237, 237, 237);
