--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@
     padding: 100px;
     padding-bottom: 0;
     overflow-y: auto;
-    flex-direction: column-reverse;
+    flex-direction: column;
     position: relative;
 }
 
